Fix overflowing thread titles

--- a/_sass/pages/_thread-list.scss
+++ b/_sass/pages/_thread-list.scss
@@ -152,6 +152,8 @@
 
             &--primary,
             &--latest {
+                overflow: auto;
+                word-wrap: break-word;
 
                 @include bp-small-max {
                     width: 100%; // width override for small screens
